--- a/wireframe.html
+++ b/wireframe.html
@@ -36,7 +36,7 @@
 	<p>En esta tercera y última página interna podemos observar los distintos wireframes realizados para trabajar las distintas adaptaciones de pantalla(XI, Large, Medium y Small) de cada apartado correspondiente a la página, desde el index principal hasta los personajes, la trivia y las escenas.</p>
 
 	<!-- PDF 1-->
-	<embed src="pdf/final wireframe.pdf" type="application/pdf" width="100%" height="600px">
+	<embed src="Fina ant-man wireframes (1).pdf" type="application/pdf" width="100%" height="600px">
 
 		
 
